--- a/styles/style.css
+++ b/styles/style.css
@@ -2,3 +2,84 @@ body {
   margin: 0%;
   font-family: "Montserrat", sans-serif;
 }
+/* Banner Style  */
+.top-banner {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  width: 80%;
+  align-items: center;
+  background-color: #161616;
+  margin: 50px auto;
+  border-radius: 30px;
+}
+.top-banner-left {
+  color: whitesmoke;
+  margin: 0 auto;
+  padding-left: 10%;
+  z-index: 1;
+}
+.top-banner-left h1 {
+  font-weight: 700;
+  font-size: 70px;
+  line-height: 80px;
+  margin: 0%;
+}
+.top-banner-left p {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 26px;
+}
+
+/* Learn More Button Style  */
+.learn-more-button {
+  border-radius: 4px;
+  background-color: #dd0000;
+  border: none;
+  color: #fff;
+  text-align: center;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 23px;
+  padding: 16px;
+  width: 187px;
+  height: 56px;
+  transition: all 0.5s;
+  cursor: pointer;
+  border-radius: 5px;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+.learn-more-button::after {
+  content: "»";
+  position: absolute;
+  opacity: 0;
+  right: -5px;
+  transition: 0.5s;
+}
+.learn-more-button:hover {
+  padding-right: 24px;
+  padding-left: 8px;
+}
+.learn-more-button:hover::after {
+  opacity: 1;
+  right: 30px;
+}
+
+.learn-more-button a {
+  text-decoration: none;
+  color: whitesmoke;
+}
+.top-banner-right {
+  margin: 0 auto;
+  padding: 2% 2% 0% 2%;
+}
+.top-banner-right img {
+  width: 581px;
+}
+
+.match-info {
+  width: 80%;
+  margin: 30px auto;
+  display: flex;
+}
