--- a/styles/style.css
+++ b/styles/style.css
@@ -8,7 +8,7 @@ body {
   grid-template-columns: repeat(2, 1fr);
   width: 80%;
   align-items: center;
-  background-color: #161616;
+  background-color: #0d1426;
   margin: 50px auto;
   border-radius: 30px;
 }
@@ -82,4 +82,93 @@ body {
   width: 80%;
   margin: 30px auto;
   display: flex;
+}
+
+/* Navigation Bars */
+.navigation {
+  width: 25%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: #0d1426;
+  padding: 1.5%;
+  border-radius: 15px;
+  margin-right: 1%;
+}
+.navigation button {
+  width: 100%;
+  height: 68px;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 30px;
+  border-radius: 15px;
+}
+.navigation button:hover {
+  background-color: #dd0000;
+  font-size: 27px;
+  color: whitesmoke;
+  transition: 0.5s;
+  cursor: pointer;
+}
+.nav-2 {
+  margin: 5% 0;
+}
+.nav-3 {
+  background-color: #dd0000;
+  font-size: 27px;
+  color: whitesmoke;
+}
+
+/* Blogs Section */
+.blogs {
+  width: 75%;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 1.5%;
+}
+.blog {
+  padding: 5%;
+  border-radius: 10px;
+  border: 1px solid rgba(128, 128, 128, 0.141);
+  box-shadow: 5px 5px 10px rgba(128, 128, 128, 0.133);
+}
+.blog:hover {
+  box-shadow: 5px 5px 15px rgba(98, 97, 97, 0.379);
+  transition: 0.5s;
+}
+
+.blogs img {
+  width: 100%;
+  border-radius: 10px;
+  margin-bottom: 3%;
+}
+.blogs .transfer-button {
+  background-color: #dd0000;
+  height: 40px;
+  color: whitesmoke;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 30px;
+  border-radius: 10px;
+  border: none;
+}
+.blogs .transfer-button:hover {
+  box-shadow: 3px 3px 10px rgba(221, 0, 0, 0.479);
+  transition: 0.5s;
+  cursor: pointer;
+}
+.clock-comment {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  font-size: 20px;
+  color: gray;
+}
+.icons {
+  width: 50%;
+  display: flex;
+  align-items: center;
+}
+.icon {
+  margin-right: 20px;
 }
