--- a/styles/style.css
+++ b/styles/style.css
@@ -16,7 +16,6 @@ body {
   color: whitesmoke;
   margin: 0 auto;
   padding-left: 10%;
-  z-index: 1;
 }
 .top-banner-left h1 {
   font-weight: 700;
@@ -82,6 +81,7 @@ body {
   width: 80%;
   margin: 30px auto;
   display: flex;
+  margin-bottom: 50px;
 }
 
 /* Navigation Bars */
@@ -171,4 +171,56 @@ body {
 }
 .icon {
   margin-right: 20px;
+}
+.view-more-button {
+  margin-top: 100px;
+  text-align: center;
+  display: none;
+}
+/* Footer Section  */
+footer {
+  height: 444px;
+  background-color: #0d1426;
+  margin-top: 100px;
+  text-align: center;
+  align-items: center;
+}
+.footer-info {
+  padding-top: 3%;
+}
+.footer-info h1 {
+  color: whitesmoke;
+  font-weight: 600;
+  font-size: 60px;
+  line-height: 60px;
+}
+.footer-info hr {
+  width: 80%;
+  color: rgba(245, 245, 245, 0.242);
+  margin-bottom: 50px;
+}
+.important-links {
+  margin: 0 auto;
+  width: 80%;
+  text-align: center;
+}
+.important-links a {
+  padding: 2%;
+  text-decoration: none;
+  color: rgba(245, 245, 245, 0.429);
+}
+.social-media {
+  margin: 0 auto;
+  width: 80%;
+  margin-top: 40px;
+  font-size: 30px;
+}
+.social-media a {
+  text-decoration: none;
+  color: rgba(245, 245, 245, 0.242);
+  padding: 2%;
+}
+.social-media a:hover {
+  font-size: 35px;
+  transition: 0.5s;
 }
