--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
 }
 .top-banner-left h1 {
   font-weight: 700;
-  font-size: 70px;
+  font-size: 65px;
   line-height: 80px;
   margin: 0%;
 }
@@ -72,16 +72,27 @@ body {
 .top-banner-right {
   margin: 0 auto;
   padding: 2% 2% 0% 2%;
+  overflow: hidden;
 }
 .top-banner-right img {
-  width: 581px;
+  width: 100%;
+  transition: 0.7s all ease-in-out;
+}
+.top-banner-right img:hover {
+  transform: scale(1.05);
 }
 
+/* Main section  */
+main {
+  height: fit-content;
+}
 .match-info {
   width: 80%;
+  height: 100%;
   margin: 30px auto;
   display: flex;
-  margin-bottom: 50px;
+  margin-bottom: 100px;
+  padding: 1%;
 }
 
 /* Navigation Bars */
@@ -122,9 +133,10 @@ body {
 /* Blogs Section */
 .blogs {
   width: 75%;
+  height: 100%;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  gap: 1.5%;
+  gap: 1%;
 }
 .blog {
   padding: 5%;
@@ -179,7 +191,7 @@ body {
 }
 /* Footer Section  */
 footer {
-  height: 444px;
+  height: 500px;
   background-color: #0d1426;
   margin-top: 100px;
   text-align: center;
@@ -200,7 +212,9 @@ footer {
   margin-bottom: 50px;
 }
 .important-links {
+  display: flex;
   margin: 0 auto;
+  justify-content: center;
   width: 80%;
   text-align: center;
 }
@@ -223,4 +237,64 @@ footer {
 .social-media a:hover {
   font-size: 35px;
   transition: 0.5s;
+}
+/* Responsive For Mobile Devices  */
+@media only screen and (max-width: 688px) {
+  .top-banner {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+  }
+  .top-banner-left h1 {
+    font-size: 35px;
+    line-height: 50px;
+  }
+  .top-banner-left p {
+    font-size: 14px;
+    line-height: 24px;
+    white-space: nowrap;
+    margin: 10px auto;
+    width: 250px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    border: 1px solid #0d1426;
+  }
+  .top-banner-left {
+    padding: 10%;
+    text-align: center;
+  }
+  .match-info {
+    flex-direction: column;
+  }
+  .navigation {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    background-color: white;
+    padding: 1.5%;
+    border-radius: 15px;
+    margin: 0px auto 20px auto;
+  }
+  .navigation button {
+    width: 100%;
+    height: 68px;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 30px;
+    border: 1px solid #e8e8e8;
+    border-radius: 10px;
+  }
+  .blogs {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    gap: 1%;
+  }
+  footer {
+    height: 550px;
+    margin-top: 350px;
+  }
+  .important-links {
+    flex-direction: column;
+  }
 }
