--- a/styles/upcomming.css
+++ b/styles/upcomming.css
@@ -1,372 +1,17 @@
-body {
-  margin: 0%;
-  font-family: "Montserrat", sans-serif;
+/* Flag Style  */
+.flag {
+  display: flex;
+  padding-left: 20px;
+  padding-right: 20px;
+  gap: 20px;
 }
-
-/* Banner Style  */
-.top-banner {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  width: 80%;
-  align-items: center;
-  background-color: #0d1426;
-  margin: 50px auto;
-  border-radius: 30px;
-}
-
-/* Top Banner Left Part */
-.top-banner-left {
-  color: whitesmoke;
-  margin: 0 auto;
-  padding-left: 10%;
-}
-.top-banner-left h1 {
-  font-weight: 700;
-  font-size: 65px;
-  line-height: 80px;
-  margin: 0%;
-}
-.top-banner-left p {
-  font-weight: 400;
-  font-size: 16px;
-  line-height: 26px;
-}
-
-/* Learn More Button Style  */
-.learn-more-button {
-  border-radius: 4px;
-  background-color: #dd0000;
-  border: none;
-  color: #fff;
-  text-align: center;
-  font-weight: 400;
-  font-size: 20px;
-  line-height: 23px;
-  padding: 16px;
-  width: 187px;
-  height: 56px;
-  transition: all 0.5s;
-  cursor: pointer;
-  border-radius: 5px;
-  display: inline-block;
-  position: relative;
-  transition: 0.5s;
-}
-.learn-more-button::after {
-  content: "»";
-  position: absolute;
-  opacity: 0;
-  right: -5px;
-  transition: 0.5s;
-}
-.learn-more-button:hover {
-  padding-right: 24px;
-  padding-left: 8px;
-}
-.learn-more-button:hover::after {
-  opacity: 1;
-  right: 30px;
-}
-
-.learn-more-button a {
-  text-decoration: none;
-  color: whitesmoke;
-}
-
-/* Top Banner Right Part */
-.top-banner-right {
-  margin: 0 auto;
-  padding: 2% 2% 0% 2%;
-  overflow: hidden;
-}
-.top-banner-right img {
+.flag img {
   width: 100%;
-  transition: 0.7s all ease-in-out;
 }
-.top-banner-right img:hover {
-  transform: scale(1.05);
-}
-
-/* Main section  */
-main {
-  height: fit-content;
-}
-.match-info {
-  width: 80%;
-  height: 100%;
-  margin: 30px auto;
-  display: flex;
-  margin-bottom: 100px;
-  padding: 1%;
-}
-
-/* Navigation Bars */
-.navigation {
-  width: 25%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  background-color: #0d1426;
-  padding: 1.5%;
-  border-radius: 15px;
-  margin-right: 1%;
-}
-.navigation button {
-  width: 100%;
-  height: 68px;
-  font-weight: 500;
-  font-size: 25px;
-  line-height: 30px;
-  border-radius: 15px;
-}
-.navigation button:hover {
-  background-color: #dd0000;
-  font-size: 27px;
-  color: whitesmoke;
-  transition: 0.5s;
-  cursor: pointer;
-}
-.nav-2 {
-  margin: 5% 0;
-}
-.nav-3 {
-  background-color: #dd0000;
-  font-size: 27px;
-  color: whitesmoke;
-}
-
-/* Blogs Section */
-.blogs {
-  width: 75%;
-  height: 100%;
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1%;
-}
-.blog {
-  padding: 5%;
-  border-radius: 10px;
-  border: 1px solid rgba(128, 128, 128, 0.141);
-  box-shadow: 5px 5px 10px rgba(128, 128, 128, 0.133);
-}
-.blog:hover {
-  box-shadow: 5px 5px 15px rgba(98, 97, 97, 0.379);
-  transition: 0.5s;
-}
-
-.blogs img {
-  width: 100%;
-  border-radius: 10px;
-  margin-bottom: 3%;
-}
-.blogs .transfer-button {
-  background-color: #dd0000;
-  height: 40px;
-  color: whitesmoke;
-  font-weight: 500;
-  font-size: 20px;
-  line-height: 30px;
-  border-radius: 10px;
-  border: none;
-}
-.blogs .transfer-button:hover {
-  box-shadow: 3px 3px 10px rgba(221, 0, 0, 0.479);
-  transition: 0.5s;
-  cursor: pointer;
-}
-.clock-comment {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  font-size: 20px;
-  color: gray;
-}
-.icons {
-  width: 50%;
-  display: flex;
-  align-items: center;
-}
-.icon {
-  margin-right: 20px;
-}
-.view-more-button {
-  margin-top: 100px;
-  text-align: center;
-  display: none;
-}
-
-/* Footer Section  */
-footer {
-  height: 500px;
-  background-color: #0d1426;
-  margin-top: 100px;
-  text-align: center;
-  align-items: center;
-}
-.footer-info {
-  padding-top: 3%;
-}
-.footer-info h1 {
-  color: whitesmoke;
-  font-weight: 600;
-  font-size: 60px;
-  line-height: 60px;
-}
-.footer-info hr {
-  width: 80%;
-  color: rgba(245, 245, 245, 0.242);
-  margin-bottom: 50px;
-}
-.important-links {
-  display: flex;
-  margin: 0 auto;
-  justify-content: center;
-  width: 80%;
+.date-info {
+  margin-top: 20px;
   text-align: center;
 }
-.important-links a {
-  padding: 2%;
-  text-decoration: none;
-  color: rgba(245, 245, 245, 0.429);
-}
-.social-media {
-  margin: 0 auto;
-  width: 80%;
-  margin-top: 40px;
-  font-size: 30px;
-}
-.social-media a {
-  text-decoration: none;
-  color: rgba(245, 245, 245, 0.242);
-  padding: 2%;
-}
-.social-media a:hover {
-  font-size: 35px;
-  transition: 0.5s;
-}
-
-/* Responsive For Mobile Devices  */
-@media only screen and (max-width: 688px) {
-  .top-banner {
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-  }
-  .top-banner-left h1 {
-    font-size: 35px;
-    line-height: 50px;
-  }
-  .top-banner-left p {
-    font-size: 14px;
-    line-height: 24px;
-    white-space: nowrap;
-    margin: 10px auto;
-    width: 250px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    border: 1px solid #0d1426;
-  }
-  .top-banner-left {
-    padding: 10%;
-    text-align: center;
-  }
-  .match-info {
-    flex-direction: column;
-  }
-  .navigation {
-    width: 80%;
-    display: flex;
-    flex-direction: column;
-    background-color: white;
-    padding: 1.5%;
-    border-radius: 15px;
-    margin: 0px auto 20px auto;
-  }
-  .navigation button {
-    width: 100%;
-    height: 68px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    border: 1px solid #e8e8e8;
-    border-radius: 10px;
-  }
-  .blogs {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(1, 1fr);
-    gap: 1%;
-  }
-  footer {
-    height: 550px;
-    margin-top: 350px;
-  }
-  .important-links {
-    flex-direction: column;
-  }
-}
-
-/* Responsive for Tablet Devices  */
-@media only screen and (min-width: 689px) and (max-width: 992px) {
-  .top-banner-left h1 {
-    font-size: 30px;
-    line-height: 50px;
-  }
-  .top-banner-left p {
-    font-size: 14px;
-    line-height: 24px;
-    white-space: nowrap;
-    margin: 10px auto;
-    width: 250px;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    border: 1px solid #0d1426;
-  }
-  .top-banner-left {
-    padding: 10%;
-    text-align: center;
-  }
-  .learn-more-button {
-    width: 180px;
-    height: 50px;
-  }
-  .top-banner-right img {
-    width: 90%;
-  }
-  .match-info {
-    flex-direction: column;
-  }
-  .navigation {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    background-color: white;
-    padding: 0;
-    border-radius: 15px;
-    margin: 0px auto 20px auto;
-    justify-content: space-between;
-    align-items: center;
-  }
-  .navigation button {
-    width: 200px;
-    height: 68px;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 30px;
-    border: 1px solid #e8e8e8;
-    border-radius: 10px;
-  }
-  .blogs {
-    width: 100%;
-    height: 100%;
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1%;
-  }
-  .blog-9 {
-    display: none;
-  }
-  .view-more-button {
-    display: block;
-  }
+.date-info h3 {
+  color: #243d7d;
 }
